# forecasting-workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/app/: core.py
tests/: test_core.py
