[tool.poetry]
name = "forecasting-workshop"
version = "0.1.0"
description = "Workshop project for time-series forecasting."
authors = ["mahfudz19 mfz.masyhur97@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
# Add your project dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"